# lofi-focus-tui

./: .gitignore  README.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: ace-step.md  configuration.md  usage.md  user-acceptance-testing.md
docs/superpowers/plans/: 2026-06-20-lofi-focus-tui-roadmap.md
src/lofi_focus_tui/: cli.py  composition.py  config.py  devices.py  diagnostics.py  domain.py  history.py  presets.py  prompt_safety.py
src/lofi_focus_tui/audio/: cache.py  continuity.py  normalization.py  output.py  playback.py  player.py  wav.py
src/lofi_focus_tui/backend/: api.py  session_manager.py  status.py  tasks.py
src/lofi_focus_tui/generation/: ace_step.py  base.py  http_ace_step.py  mock.py  runpod.py  settings.py
src/lofi_focus_tui/tui/: app.py  backend_client.py  widgets.py
tests/: test_ace_step_adapter.py  test_backend_api.py  test_backend_client.py  test_backend_tasks.py  test_composition.py  test_config.py  test_continuity.py  test_devices.py  test_diagnostics.py  test_generation_settings.py  test_http_ace_step.py  test_live_ace_step_http.py  test_mock_generation.py  test_normalization.py  test_output_history.py  test_playback.py  test_presets.py  test_project_metadata.py  test_prompt_safety.py  test_session_manager.py  test_tui_app.py
